fix: dashboard/navbar z-index value

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1470,6 +1470,7 @@ body{
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
+  z-index: 1000;
 }
 
 .nav{
